--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
-version: "3.9"  # optional since v1.27.0
+version: '3'
+
 services:
-  web:
-    build: .
+  jekyll:
+    image: jekyll/jekyll:latest
+    command: jekyll serve --watch --force_polling --verbose
     ports:
-      - "5000:5000"
+      - 4000:4000
     volumes:
-      - .:/code
-      - logvolume01:/var/log
-    links:
-      - redis
-  redis:
-    image: redis
-volumes:
-  logvolume01: {}
+      - .:/srv/jekyll
