--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,28 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Push Container to Heroku
+name: Jekyll site CI
 
 on:
   push:
-    branches:
-      - gh-pages
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  build:
+  push_to_registry:
+    name: Push docker image to Docker hub
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
-
-    - name: Retrieve Gem Bundles Cache
-      uses: actions/cache@v2
-      with:
-        path: _bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-
-    - name: Generate site
-      run: |
-        mkdir -p _bundle/cache
-        chmod a+rwx -R .
-        docker-compose run -e JEKYLL_ENV=production jekyll bundle install
-        docker-compose run -e JEKYLL_ENV=production jekyll bundle exec jekyll build --trace
-    - name: Login to Heroku Container registry
-      env:
-        # run `heroku authorizations:create` to generate the HEROKU_API_KEY
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:login
-
-    - name: Build and push
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} --recursive
-
-    - name: Release
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+      - name: Login to heroku container registry
+        env: 
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:login
+      - name: Push image to heroku container registry
+        env: 
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:push -a ${{ secrets.HEROKU_APP_NAME }} web
+      - name: Release
+        env: 
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:release -a ${{ secrets.HEROKU_APP_NAME }} web
